Convert to ES6 classes. Persist the data to Local Storage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div>
         <label for="title">Title</label>
         <input type="text" id="title" class="u-full-width">
-        <!-- class="u-full-width" - a skeleton class to make it a block level input that will go all the way accross -->
+        <!-- class="u-full-width" - a skeleton class to make it a block level input that will go all the way across -->
       </div>
       <div>
         <label for="author">Author</label>
@@ -64,7 +64,7 @@
     </table>
   </div>
 
-  <script src="app.js"></script>
+  <script src="appes6.js"></script>
 </body>
 
 </html>
